ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__clipboard_image_pasted_into_chat_input.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered_after_paste
---
  .                                                        [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ⏸ ask permissions on                                                          
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ > [Image #1]                                                             │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  shift+tab permissions  ·  /home
