ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__completed_update_notice.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                        [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                Ash 1.2.3 is ready · restart to use the update  
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ >                                                                        │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  shift+tab permissions  ·  /home
