ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__config_general_tab.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 21)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
            ┌── 配 置  ─────────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   通 用     提 供 商     语 言 服 务 器     Issues                                │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ 搜 索 配 置                                                            │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  2 more above                                                           │             
            │  自 动 更 新                选 择 版 本 更 新 节 奏                      最 新        │             
            │  以 差 异 显 示  Git 更 改     显 示 新 增 和 删 除 的 行 ， 而 不 是 已 更 改      [   ]      │             
            │  语 言                    切 换 界 面 语 言                          中 文        │             
            │  状 态 栏 风 格              文 字 与 数 值 ， 清 爽 易 读                  简 洁        │             
            │> 按 键 提 示 风 格            突 出 按 键 ， 弱 化 说 明                    对 比        │             
            │  屏 幕 模 式                使 用 全 屏 界 面 或 保 留 终 端 历 史            fullscreen │             
  ╭─────────│  Enter/Space to change · Tab/Shift+Tab to switch · Esc to close         │──────────╮  
  │ > Build └─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
