ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__help_modal.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: rendered
---
  .                                                        [— / —] [Dashboard]  
                                                                                
● Conver┌── Help ──────────────────────────────────────────────────[✗]─┐        
        │                                                              │        
        │   Commands    Keys                                           │        
        │                                                              │        
        │  ╭─────────────────────────────────────────────────────────╮ │        
        │  │ Search commands and shortcuts                           │ │        
        │  ╰─────────────────────────────────────────────────────────╯ │        
        │> /status  ·  show status                                     │        
        │  /model  ·  show model                                       │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
        │                                                              │        
  ╭─────│  Tab/Shift+Tab to switch  ·  / to search  ·  Esc to close    │─────╮  
  │ > dr└──────────────────────────────────────────────────────────────┘     │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯
