ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__input_history_search.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: "render(&app, 100, 20)"
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  ⏸ ask permissions on                                                                              
  ╭─History search: find · ↑/↓ browse · Enter edit · Esc cancel──────────────────────────────────╮  
  │ > find the input history owner                                                               │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                                    
  Enter send  ·  shift+tab permissions  ·  /home
