ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__tests__modal_wrapped_tabs.snap
---
source: ash-code/tui/src/app/fullscreen/frame_tests.rs
expression: text
---
"                    "
"┌── Panel ─────[✗]─┐"
"│                  │"
"│   First tab      │"
"│   Second tab     │"
"│                  │"
"│> First item      │"
"│                  │"
"│                  │"
"│  Esc to close    │"
"└──────────────────┘"
"                    "
